8160897: Concurrent mark mark stack memory allocation leaks memory

Fix and clean up concurrent mark mark stack memory allocation.

Reviewed-by: jmasa, sangheki